--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,3 +7,13 @@
   backdrop-filter: blur(10px);
   width: 100%;
 }
+
+
+/* Hide all scrollbars */
+*::-webkit-scrollbar {
+  display: none;
+}
+* {
+  scrollbar-width: none; /* Firefox */
+  -ms-overflow-style: none; /* IE and Edge */
+}
