--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,7 +6,7 @@ body {
   background: rgba(255, 255, 255, 0.1);
   /* backdrop-filter: blur(10px); */
   width: 100%;
-  background-image: url("/boahancock2.png");
+  /* background-image: url("/boahancock2.png"); */
   height: 100vh;
   background-size: cover;
   background-repeat: no-repeat;
